@@ -1,6 +1,10 @@
 Version 1.8.4
 - BUG: Issue 584: Revert from log dialog bottom pane
        fails if the file was deleted. (Sergey Azarkevich)
+- BUG: Issue #585: repo browser doesn't refresh directory
+       browser when clicking "up a directory". (Stefan)
+- BUG: Issue #587: wrong colors in locatorbar
+       in TortoiseBlame. (Stefan)
 - NEW: Issue #586: Option to disable SVNParentPath
        handling in repo browser. (Stefan)
 
